--- a/Lyrics-Music-video/public/index.html
+++ b/Lyrics-Music-video/public/index.html
@@ -15,7 +15,7 @@
 <body class="bg-dark text-white text-center mt-2">
 
     <div id="header">
-        <h1 class="d-inline">Get Ldeo</h1>
+        <h1 class="d-inline">Get Lyrics + Music video</h1>
         <hr>
     </div>
 
