--- a/Lyrics-Music-video/public/index.html
+++ b/Lyrics-Music-video/public/index.html
@@ -29,6 +29,10 @@
         </form>
         <hr>
 
+        <div class="spinner-border d-none loader" role="status">
+            <span class="visually-hidden">Loading...</span>
+        </div>
+
         <div class="music-video p-3"></div>
 
         <p class="lyrics pb-5"></p>
