image-search-app link added

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         <li><a class="fs-2" href="Random-Dog-Slideshow/index.html" target="_blank">Dog slideshow</a><br></li>
         <li><a class="fs-2" href="https://lyrics-and-music-video.herokuapp.com" target="_blank">Lyrics + Music video</a><br></li>
-        <li><a class="fs-2" href="Image-Search/index.html" target="_blank">Infinite Image search</a><br></li>
+        <li><a class="fs-2" href="https://abhishake21-image-search.herokuapp.com/" target="_blank">Infinite Image search</a><br></li>
 
     </div>
 
